--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,198 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Start Global rules */
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  --text-color: #e6e4e5;
+  --typing-color: #bbbbbb;
+  --theme-color: #2ecc71;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Helvetica', sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+
+/*medium*/
+@media (min-width: 992px) {
+  .container {
+    width: 920px;
+  }
+}
+
+/*large*/
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+
+.main-title {
+  text-align: center;
+  color: rgba(255, 255, 255, 0.95);
+  font-size: 36px;
+  position: relative;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 130px auto 80px;
+  font-weight: normal;
+}
+
+.main-title::before {
+  content: '';
+  position: absolute;
+  background-color: green;
+  width: 180%;
+  height: 200%;
+  z-index: -1;
+  -webkit-transform: translate(-50%, -50%) rotate(-6deg);
+          transform: translate(-50%, -50%) rotate(-6deg);
+  left: 50%;
+  top: 50%;
+}
+
+@media (max-width: 500px) {
+  .main-title {
+    font-size: 32px;
+    margin: 85px auto;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #999;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #333;
+  border-radius: 1em;
+}
+
+/* End Global rules */
+
+
+
+nav {
+  position: fixed;
+  width: 100%;
+  -webkit-transition: .25s;
+  transition: .25s;
+  z-index: 9999;
+}
+
+nav .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav .logo {
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 30px;
+  color: white;
+}
+
+nav .links {
+  display: flex;
+  gap: 45px;
+}
+
+nav .links li a {
+  color: rgba(255, 255, 255, 0.75);
+  text-transform: uppercase;
+  position: relative;
+  padding: 20px 0;
+  transition: .25s;
+}
+
+nav .links li a:hover{
+  color: white;
+}
+
+nav .links li a::before {
+  position: absolute;
+  content: '';
+  height: 3px;
+  width: 0;
+  transform: translateX(-50%);
+  background-color: rgba(255, 255, 255, 0.95);
+  left: 50%;
+  bottom: 0;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+nav .links li a:hover::before {
+  width: 125%;
+  color: white;
+}
+
+nav .ca-se a{
+  color: white;
+}
+
+nav .ca-se .i {
+  cursor: pointer;
+  padding: 10px;
+  font-size: 18px;
+}
+
+nav .ca-se i:last-child {
+  margin-left: 5px;
+}
+
+body{
+  background-color: #555;
+}
+
+.burger{
+  height: fit-content;
+  transition: 0.25s;
+  display: none;
+  padding: 15px;
+  cursor: pointer;
+
+}
+span{
+    height: 3px;
+    width: 25px;
+    background-color: white;
+    display: block;
+    transition: inherit;
+    
+}
+span:not(:last-child){
+        margin-bottom: 4px;
+    }
