--- a/src/index.css
+++ b/src/index.css
@@ -186,13 +186,79 @@ body{
 
 }
 span{
-    height: 3px;
-    width: 25px;
-    background-color: white;
-    display: block;
-    transition: inherit;
-    
+  height: 3px;
+  width: 25px;
+  background-color: white;
+  display: block;
+  transition: inherit;
 }
 span:not(:last-child){
-        margin-bottom: 4px;
-    }
+  margin-bottom: 4px;
+}
+
+@media (max-width: 790px){
+  nav .ca-se,
+  nav .links{
+    display: none;
+  }
+  .burger{
+    display: block;
+  }
+  .burger.active span:nth-child(2){
+    opacity: 0;
+  }
+  .burger.active span:nth-child(1){
+    transform: rotate(-45deg) translate(-3px, 7px);
+  }
+  .burger.active span:nth-child(3){
+    transform: rotate(45deg) translate(-3px, -7px);
+  }
+  nav.active .links{
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 250px;
+    position: absolute;
+    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.85);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    top: 100%;
+    gap: 20px;
+    padding: 20px 0;
+    z-index: 99;
+}
+
+nav.active .links::before{
+  position: absolute;
+  content: '';
+  width: 0;
+  height: 0;
+  border: 15px solid;
+  border-color: transparent transparent rgba(0, 0, 0, 0.75) transparent;
+  top: -30px;
+  right: 25px;
+}
+nav.active .links li{
+  width: fit-content;
+  
+}
+nav.active .links li a::before{
+  bottom: 10px;
+}
+nav.active .ca-se{
+  position: absolute;
+  right: 0;
+  bottom: -260px;
+  width: 250px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  background-color: rgba(14, 14, 14, 0.95);
+  backdrop-filter: blur(5px);
+  padding: 20px 0;
+  z-index: 99;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+}
+
