--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,7 @@ nav .logo {
 nav .links {
   display: flex;
   gap: 45px;
+  transition: .3s;
 }
 
 nav .links li a {
@@ -200,8 +201,42 @@ span:not(:last-child){
 @media (max-width: 790px){
   nav .ca-se,
   nav .links{
-    display: none;
+    /* display: none; */
+    position: absolute;
+
+    right: -200%;
+    transition: 1s;
+    opacity: 0;
   }
+  nav .links{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    backdrop-filter: blur(5px);
+    width: 250px;
+    position: absolute;
+    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.85);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    top: 100%;
+    gap: 20px;
+    padding: 20px 0;
+    z-index: 99;
+  }
+  nav .ca-se{
+    position: absolute;
+    bottom: -260px;
+    width: 250px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    background-color: rgba(14, 14, 14, 0.95);
+    backdrop-filter: blur(5px);
+    padding: 20px 0;
+    z-index: 99;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  }
+
   .burger{
     display: block;
   }
@@ -216,19 +251,7 @@ span:not(:last-child){
   }
   nav.active .links{
     right: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    backdrop-filter: blur(5px);
-    width: 250px;
-    position: absolute;
-    padding: 15px;
-    background-color: rgba(0, 0, 0, 0.85);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
-    top: 100%;
-    gap: 20px;
-    padding: 20px 0;
-    z-index: 99;
+    opacity: 1;
 }
 
 nav.active .links::before{
@@ -255,8 +278,9 @@ nav.active .links li a::before{
   background-color: rgba(255, 255, 255, 0.9);
 }
 nav.active .ca-se{
-  position: absolute;
   right: 0;
+  opacity: 1;
+  position: absolute;
   bottom: -260px;
   width: 250px;
   display: flex;
